Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36828

android: Fail to record a video using qml Camera

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.2.0
    • Multimedia
    • None
    • Android
    • 29ba8cf4c417d7c2ff9f2815bdc49c97215283a3

    Description

      The record function doesn’t work well while running the Official sample 《QML Camera Example》. According to the code,the reason is camera.videoRecorder.recorderStatus isn’t equal to CameraRecorder.LoadedStatus .

      And AndroidManifest.xml have those code:
      <uses-permission android:name="android.permission.CAMERA"/>
      <uses-permission android:name="android.permission.INTERNET"/>
      <uses-permission android:name="android.permission.RECORD_AUDIO"/>
      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>

      Attachments

        For Gerrit Dashboard: QTBUG-36828
        # Subject Branch Project Status CR V

        Activity

          People

            ylopes Yoann Lopes
            thinkingtiger wenhu
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes